Fixed QA Issues

--- a/fsh/config.yaml
+++ b/fsh/config.yaml
@@ -12,6 +12,9 @@ publisher:
 jurisdiction: urn:iso:std:iso:3166#DK "Denmark"
 template: fhir.base.template#0.1.0
 
+dependencies:
+  dk.fhir.ig.kl.common.caresocial: current
+
 menu:
   Home: index.html
   Artifacts: artifacts.html
